# spacescape

./: README.md
trunk/: CMakeLists.txt
trunk/Spacescape/: CMakeLists.txt
trunk/Spacescape/include/: QtOgreWidget.h  QtSpacescapeExportFileDialog.h  QtSpacescapeUI.h
trunk/Spacescape/src/: QtOgreWidget.cpp  QtSpacescapeExportFileDialog.cpp  QtSpacescapeMainWindow.cpp  QtSpacescapeWidget.cpp
trunk/SpacescapePlugin/: CMakeLists.txt
trunk/SpacescapePlugin/include/: SpacescapeBillboardSet.h
trunk/SpacescapePlugin/src/: SpacescapeBillboardSet.cpp  SpacescapeLayerBillboards.cpp  SpacescapePlugin.cpp
